--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,103 @@
-django-bootstrap-form
+akismet==0.2.0
+aldryn-apphooks-config==0.2.6
+aldryn-boilerplates==0.7.3
+aldryn-common==1.0.0
+aldryn-search==0.2.10
+amqp==1.4.7
+anyjson==0.3.3
+askbot==0.9.1
+beautifulsoup4==4.4.1
+billiard==3.3.0.21
+celery==3.1.19
+chardet==2.3.0
+cmsplugin-filer==1.0.0
+Coffin==0.3.8
+dj-database-url==0.3.0
+Django==1.7.11
+django-admin-enhancer==1.0.0
+django-appconf==1.0.1
+django-appdata==0.1.4
+django-avatar==2.2.0
+django-bootstrap-form==3.2
+django-celery==3.1.17
+django-classy-tags==0.6.2
+django-cms==3.2.0
+django-compressor==1.5
+django-countries==3.3
+django-filer==1.0.4
+django-followit==0.1.0
+django-formtools==1.0
+django-haystack==2.4.1
+django-keyedcache==1.5.1
+django-kombu==0.9.4
+django-meta==0.3.1
+django-meta-mixin==0.2.1
+django-mptt==0.7.4
+django-parler==1.5.1
+django-picklefield==0.3.0
+django-polymorphic==0.7.2
+django-recaptcha==1.0.4
+django-reversion==1.8.5
+django-robots==1.0
+django-sekizai==0.8.2
+Django-Select2==4.3.2
+django-sortedm2m==1.1.0
+django-spurl==0.6.2
+django-standard-form==1.1.1
+django-taggit==0.17.5
+django-taggit-autosuggest==0.2.8
+django-taggit-templatetags==0.2.5
+django-templatetag-sugar==1.0
+django-threaded-multihost==1.4.post1
+django-tinymce==1.5.3
+django-transaction-signals==1.0.0
+django-treebeard==3.0
+djangocms-admin-style==1.0.6
+djangocms-apphook-setup==0.1.1
+djangocms-blog==0.6.2
+djangocms-column==1.6.0
+djangocms-file==0.2.0
+djangocms-flash==0.3.0
+djangocms-googlemap==0.4.0
+djangocms-inherit==0.1.1
+djangocms-installer==0.8.3
+djangocms-link==1.7.1
+djangocms-picture==0.2.0
+djangocms-style==1.6.0
+djangocms-teaser==0.2.0
+djangocms-text-ckeditor==2.8.0
+djangocms-video==0.2.0
+djangorestframework==3.3.2
+docutils==0.12
+easy-thumbnails==2.2.1
+html5lib==0.90
+httplib2==0.9.2
+Jinja2==2.8
+jsonfield==1.0.3
+kombu==3.0.29
+lamson==1.3.4
+lockfile==0.12.2
+longerusername==0.4
+lxml==3.5.0
+markdown2==2.3.0
+MarkupSafe==0.23
+mock==1.0.1
+nose==1.3.7
+oauth2==1.9.0.post1
+Pillow==3.0.0
+PyJWT==1.4.0
+pystache==0.3.1
+python-daemon==2.1.0
+python-modargs==1.7
+python-openid==2.2.5
+pytz==2015.7
+requirements-parser==0.1.0
+sanction==0.3.1
+simplejson==3.8.1
+six==1.10.0
+South==1.0.2
+tzlocal==1.2
+Unidecode==0.4.18
+URLObject==2.4.0
+wheel==0.24.0
+YURL==0.13
